--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ body {
     color: white;
     text-align: center;
     font-family: sans-serif;
-    border: 2px solid red;
-
 }
 
 #container {
@@ -53,4 +51,16 @@ button {
 button:hover {
     filter: brightness(1.2);
     cursor: pointer;
+}
+
+#resposta{
+    margin-top: 30px;
+    transition: opacity 1s;
+}
+
+#resposta div {
+    font-size: 16px;
+    font-weight: normal;
+    opacity: 0.9;
+    margin-bottom: 10px;
 }
